deployments/02-cert-manager/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
    istio.io/dataplane-mode: ambient
    istio-injection: enabled
