deployments/02-cert-manager/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infra-gateway
  namespace: istio-system
  annotations:
    networking.istio.io/service-type: "NodePort"
    cert-manager.io/cluster-issuer: "ca-issuer"
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${APPLICATIONS.GLOBAL.BASE_URL}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: infra-wildcard-tls
